# OfferPilot

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  main.py  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-windows-release.yml  pytest-postgres.yml  pytest.yml
agent/: base.py
agent/annotations/: types.py
agent/checkpointers/: database.py
agent/graphs/: base.py  model_call.py
agent/input/: user_input.py
agent/mcp/: web_search.py
agent/models/: __init__.py  chat.py
agent/nodes/: wrappers.py
agent/state/: __init__.py  base.py  job_task_state.py  reducer.py  type.py
agent/states/: job_task_state.py
agent/tools/: __init__.py  sub_agent.py  web_search.py
agent/types/: interupt.py
api/: __init__.py
app/: error.tsx  layout.tsx  page.tsx
backend/: .gitignore  AGENTS.md  main.py
docs/: 技术选型.md
electron/: .gitignore  AGENTS.md  README.md  electron-builder.json5  electron-env.d.ts  main.ts  package-lock.json  package.json  vite.config.ts
exceptions/: __init__.py  model.py  resume.py  resume_preview.py
frontend/: package-lock.json  package.json
models/: chat.py
schemas/: ai.py  command.py  model_provider.py  model_selection.py  resume_advice.py  resume_document.py
scripts/: electron_api_entry.py
services/: __init__.py  chat_history_service.py  document_parser_service.py  model_provider_service.py  model_selection_service.py  resume_advice_service.py  resume_service.py
sql/: tables.sql
tests/: conftest.py
utils/: garble_text.py  logger.py  stream.py
(+221 files in other folders)
