[project]
name = "offerpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "loguru>=0.7.3",
    "path>=17.1.1",
    "psycopg>=3.2.0",
    "aspose-words",
    "pydantic>=2.13.0",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.3",
    "rapidocr-onnxruntime",
    "ruamel-yaml>=0.19.1",
    "sqlalchemy>=2.0.0",
    "langchain-google-genai>=4.2.2",
    "exa-py>=2.12.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.14",
    "langchain-deepseek>=1.0.1",
]
